<resources>
    <string name="app_name">Calculator</string>
    <string name="error">Error</string>
    <string name="digit0">0</string>
    <string name="digit1">1</string>
    <string name="digit2">2</string>
    <string name="digit3">3</string>
    <string name="digit4">4</string>
    <string name="digit5">5</string>
    <string name="digit6">6</string>
    <string name="digit7">7</string>
    <string name="digit8">8</string>
    <string name="digit9">9</string>
    <string name="A">A</string>
    <string name="B">B</string>
    <string name="C">C</string>
    <string name="D">D</string>
    <string name="E">E</string>
    <string name="F">F</string>
    <string name="X">X</string>
    <string name="Y">Y</string>
    <string name="del">DELETE</string>
    <string name="clear">CLR</string>
    <string name="div" translatable="false">\u00F7</string>
    <string name="mul" translatable="false">\u00D7</string>
    <string name="plus" translatable="false">\u002B</string>
    <string name="minus" translatable="false">\u2212</string>
    <string name="dot" translatable="false">\u002E</string>
    <string name="equal" translatable="false">\u003D</string>
    <string name="enter" translatable="false">\u2193</string>
    <string name="sin">sin</string>
    <string name="sin_mathematical_value" translatable="false">sin</string>
    <string name="cos">cos</string>
    <string name="cos_mathematical_value" translatable="false">cos</string>
    <string name="tan">tan</string>
    <string name="tan_mathematical_value" translatable="false">tan</string>
    <string name="pi" translatable="false">\u03C0</string>
    <string name="e">e</string>
    <string name="e_mathematical_value" translatable="false">\u0065</string>
    <string name="ln">ln</string>
    <string name="ln_mathematical_value" translatable="false">\u33D1</string>
    <string name="lg">log</string>
    <string name="lg_mathematical_value" translatable="false">\u33D2</string>
    <string name="leftParen">\u0028</string>
    <string name="rightParen">\u0029</string>
    <string name="sqrt" translatable="false">\u221A</string>
    <string name="power" translatable="false">\u005E</string>
    <string name="factorial" translatable="false">\u0021</string>
    <string name="basic">Basic panel</string>
    <string name="advanced">Advanced panel</string>
    <string name="matrix">Matrix panel</string>
    <string name="graph">Graph panel</string>
    <string name="function">Function panel</string>
    <string name="hexPanel">Hex panel</string>
    <string name="clear_history">Clear history</string>
    <string name="text_copied_toast">Text copied.</string>
    <string name="leftParenDesc">left parenthesis</string>
    <string name="rightParenDesc">right parenthesis</string>
    <string name="factorialDesc">factorial</string>
    <string name="lnDesc">natural logarithm</string>
    <string name="lgDesc">logarithm</string>
    <string name="sqrtDesc">square root</string>
    <string name="divDesc">divide</string>
    <string name="mulDesc">multiply</string>
    <string name="plusDesc">plus</string>
    <string name="minusDesc">minus</string>
    <string name="dotDesc">point</string>
    <string name="powerDesc">power</string>
    <string name="delDesc">delete</string>
    <string name="clearDesc">clear</string>
    <string name="tanDesc">tangent</string>
    <string name="sinDesc">sine</string>
    <string name="cosDesc">cosine</string>
    <string name="eDesc">Euler\'s number</string>
    <string name="piDesc">pi</string>
    <string name="equalDesc">equals</string>
    <string-array name="operators" translatable="false">
        <item>\u0028(</item>
        <item>\u0029</item>
        <item>\u0021</item>
        <item>\u33D1</item>
        <item>\u33D2</item>
        <item>\u221A</item>
        <item>\u00F7</item>
        <item>\u00D7</item>
        <item>\u002B</item>
        <item>\u2212</item>
        <item>\u002E</item>
        <item>\u005E</item>
        <item>tan</item>
        <item>sin</item>
        <item>cos</item>
        <item>\u03C0</item>
        <item>\u003D</item>
    </string-array>
    <string-array name="operatorDescs">
        
        <item>left parenthesis</item>
        
        <item>right parenthesis</item>
        
        <item>factorial</item>
        
        <item>natural logarithm</item>
        
        <item>logarithm</item>
        
        <item>square root</item>
        
        <item>divided by</item>
        
        <item>multiplied by</item>
        
        <item>plus</item>
        
        <item>minus</item>
        
        <item>\u00A0point\u00A0</item>
        
        <item>power</item>
        
        <item>tangent</item>
        
        <item>sine</item>
        
        <item>cosine</item>
        
        <item>pi</item>
        
        <item>equals</item>
    </string-array>
    <string name="i" translatable="false">i</string>
    <string name="percentage" translatable="false">%</string>
    <string name="dx">dX</string>
    <string name="dy">dY</string>
    <string name="solveForX">Solve for X</string>
    <string name="solveForY">Solve for Y</string>
    <string name="integral" translatable="false">\u222B</string>
    <string name="parentheses" translatable="false">( )</string>
    <string name="mod">mod</string>
    <string name="coma" translatable="false">,</string>
    <string name="defaultGraphTitle">Function</string>
    <string name="graphTitle">Function: </string>
    <string name="inverse">Inv</string>
    <string name="determinant">Det</string>
    <string name="eigenvalue">Eigen</string>
    <string name="solve">Solve</string>
    <string name="dotProduct">Dot</string>
    <string name="crossProduct">Cross</string>
    <string name="hex">Hex</string>
    <string name="bin">Bin</string>
    <string name="dec">Dec</string>
    <string name="hexDesc">Hexadecimal</string>
    <string name="binDesc">Binary</string>
    <string name="decDesc">Decimal</string>
    <string name="determinantDesc">Determinant</string>
    <string name="eigenvalueDesc">Eigen Values</string>
    <string name="settings">Settings</string>
    <string name="showHistory">Show History</string>
    <string name="hideHistory">Hide History</string>
</resources>