<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * Copyright (C) 2011, The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
-->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/clear_history"
        android:showAsAction="ifRoom|withText"
        android:icon="@drawable/clear_history"
        android:title="@string/clear_history"/>
    
    <item android:id="@+id/show_history"
        android:showAsAction="ifRoom|withText"
        android:icon="@drawable/clear_history"
        android:title="@string/showHistory"/>
    
    <item android:id="@+id/hide_history"
        android:showAsAction="ifRoom|withText"
        android:icon="@drawable/clear_history"
        android:title="@string/hideHistory"/>
    
    <item android:id="@+id/matrix"
        android:showAsAction="ifRoom|withText"
        android:icon="@drawable/matrix"
        android:title="@string/matrix"/>
    
    <item android:id="@+id/advanced"
        android:showAsAction="ifRoom|withText"
        android:icon="@drawable/advanced"
        android:title="@string/advanced"/>

    <item android:id="@+id/basic"
        android:showAsAction="ifRoom|withText"
        android:icon="@drawable/simple"
        android:title="@string/basic"/>
    
    <item android:id="@+id/hex"
        android:showAsAction="ifRoom|withText"
        android:icon="@drawable/hex"
        android:title="@string/hexPanel"/>
    
    <item android:id="@+id/function"
        android:showAsAction="ifRoom|withText"
        android:icon="@drawable/function"
        android:title="@string/function"/>
    
    <item android:id="@+id/graph"
        android:showAsAction="ifRoom|withText"
        android:icon="@drawable/graph"
        android:title="@string/graph"/>

    <item android:id="@+id/settings"
        android:showAsAction="ifRoom|withText"
        android:icon="@drawable/settings"
        android:title="@string/settings"/>
</menu>
