<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" >
        <Button
            android:id="@+id/sin"
            android:text="@string/sin"
            android:layout_width="@dimen/floating_window_button_height"
            android:layout_height="@dimen/floating_window_button_height"
            style="@style/Theme.Calculator.ButtonStyle.FloatingCalc" />
        <Button
            android:id="@+id/cos"
            android:text="@string/cos"
            android:layout_width="@dimen/floating_window_button_height"
            android:layout_height="@dimen/floating_window_button_height"
            style="@style/Theme.Calculator.ButtonStyle.FloatingCalc" />
        <Button
            android:id="@+id/tan"
            android:text="@string/tan"
            android:layout_width="@dimen/floating_window_button_height"
            android:layout_height="@dimen/floating_window_button_height"
            style="@style/Theme.Calculator.ButtonStyle.FloatingCalc" />
        <Button
            android:id="@+id/i"
            android:text="@string/i"
            android:layout_width="@dimen/floating_window_button_height"
            android:layout_height="@dimen/floating_window_button_height"
            style="@style/Theme.Calculator.ButtonStyle.FloatingCalc" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" >
        <Button
            android:id="@+id/ln"
            android:text="@string/ln"
            android:layout_width="@dimen/floating_window_button_height"
            android:layout_height="@dimen/floating_window_button_height"
            style="@style/Theme.Calculator.ButtonStyle.FloatingCalc" />
        <Button
            android:id="@+id/lg"
            android:text="@string/lg"
            android:layout_width="@dimen/floating_window_button_height"
            android:layout_height="@dimen/floating_window_button_height"
            style="@style/Theme.Calculator.ButtonStyle.FloatingCalc" />
        <Button
            android:id="@+id/pi"
            android:text="@string/pi"
            android:layout_width="@dimen/floating_window_button_height"
            android:layout_height="@dimen/floating_window_button_height"
            style="@style/Theme.Calculator.ButtonStyle.FloatingCalc" />
        <Button
            android:id="@+id/e"
            android:text="@string/e"
            android:layout_width="@dimen/floating_window_button_height"
            android:layout_height="@dimen/floating_window_button_height"
            style="@style/Theme.Calculator.ButtonStyle.FloatingCalc" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" >
        <Button
            android:id="@+id/percentage"
            android:text="@string/percentage"
            android:layout_width="@dimen/floating_window_button_height"
            android:layout_height="@dimen/floating_window_button_height"
            style="@style/Theme.Calculator.ButtonStyle.FloatingCalc" />
        <Button
            android:id="@+id/factorial"
            android:text="@string/factorial"
            android:layout_width="@dimen/floating_window_button_height"
            android:layout_height="@dimen/floating_window_button_height"
            style="@style/Theme.Calculator.ButtonStyle.FloatingCalc" />
        <Button
            android:id="@+id/sqrt"
            android:text="@string/sqrt"
            android:layout_width="@dimen/floating_window_button_height"
            android:layout_height="@dimen/floating_window_button_height"
            style="@style/Theme.Calculator.ButtonStyle.FloatingCalc" />
        <Button
            android:id="@+id/cbrt"
            android:text="@string/cbrt"
            android:layout_width="@dimen/floating_window_button_height"
            android:layout_height="@dimen/floating_window_button_height"
            style="@style/Theme.Calculator.ButtonStyle.FloatingCalc" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" >
        <Button
            android:id="@+id/power"
            android:text="@string/power"
            android:layout_width="@dimen/floating_window_button_height"
            android:layout_height="@dimen/floating_window_button_height"
            style="@style/Theme.Calculator.ButtonStyle.FloatingCalc" />
        <Button
            android:id="@+id/leftParen"
            android:text="@string/leftParen"
            android:layout_width="@dimen/floating_window_button_height"
            android:layout_height="@dimen/floating_window_button_height"
            style="@style/Theme.Calculator.ButtonStyle.FloatingCalc" />
        <Button
            android:id="@+id/rightParen"
            android:text="@string/rightParen"
            android:layout_width="@dimen/floating_window_button_height"
            android:layout_height="@dimen/floating_window_button_height"
            style="@style/Theme.Calculator.ButtonStyle.FloatingCalc" />
        <Button
            android:id="@+id/parentheses"
            android:text="@string/parentheses"
            android:layout_width="@dimen/floating_window_button_height"
            android:layout_height="@dimen/floating_window_button_height"
            android:background="@drawable/circle_bg"
            style="@style/Theme.Calculator.ButtonStyle.FloatingCalc" />
    </LinearLayout>
</LinearLayout>
